--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,13 @@
     padding: 0;
     margin: 0;
   }
+
+a:-webkit-any-link {
+    text-decoration: none;
+}
+
 body{
-    background-color: rgb(250, 250, 250);
+    background-color: white;
     font-family: var(--body-font);
 }
 
@@ -29,11 +34,13 @@ body{
 /* Header _ Nav */
 
 header{
+    top: 0;
     position: fixed;  
     width: 100%;
     justify-content: center;
     z-index: 1000;
     background-color: rgba(22, 22, 23, .8);
+    transition: top 0.3s;
 }
 
 .nav{
@@ -60,7 +67,6 @@ nav ul li{
     text-decoration: none;
     font-weight: lighter;
     font-size: small;
-    text-decoration: none;
 }
 
 .nav ul li a:hover{
@@ -112,6 +118,7 @@ nav ul li{
     justify-content: center;
     align-items: center;
     padding: 50px 0 50px 0;
+    background-color: rgb(250, 250, 250);
 }
 
 .section_macbook .content{
@@ -692,4 +699,152 @@ nav ul li{
     width: 70%;
     padding-top: 1%;
 }
-/* ========= ============== */
+/* ================Slider ============== */
+.apple_TV {
+    margin:50px 0 0 0;
+    padding-bottom: 50px;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+  }
+  
+  .slider {
+    display: flex;
+    max-width: 80%;
+  }
+  
+  .slides {
+    display: flex;
+  }
+  
+  .slide {
+    flex: 0 0 auto;
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+  }
+
+  
+ .apple_TV .slider button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    z-index: 2;
+  }
+  
+  .prev {
+    left: 0;
+  }
+  
+  .next {
+    right: 0;
+  }
+  
+
+  /* ==============Footer============= */
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(250, 250, 250);
+    padding-top: 20px;
+}
+
+.footer_p{
+    font-weight: lighter;
+    font-size: small;
+    color: rgb(93, 92, 92);
+}
+
+.horizontal-line {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 80%;
+    height: 1px; /* Độ dày của đường kẻ */
+    background-color: rgb(177, 177, 177); /* Màu sắc của đường kẻ */
+}
+
+.footer_grid{
+    max-width: 80%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* Tạo grid gồm 5 cột */
+    gap: 20px; /* Khoảng cách giữa các cột */
+
+    justify-content: center;
+    
+}
+
+.footer_item{
+    color: rgb(93, 92, 92);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.footer_item p {
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.footer_item ul {
+    margin-top: 5px;
+    font-weight: lighter;
+    font-size: 10px;
+    list-style: none;
+}
+
+.footer_item ul li {
+    margin-bottom: 5px;
+}
+
+.timCH {
+    margin-top: 50px;
+    width: 80%;
+    display: flex;
+    justify-content:first baseline;
+}
+
+.timCH p {
+    font-weight: light;
+    font-size: 12px;
+    color: rgb(93, 92, 92);
+}
+
+.timCH a {
+    color: #0066cc;
+}
+ 
+.end{
+    color: rgb(93, 92, 92);
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content:first baseline;
+}
+
+.end p{
+    font-weight: light;
+    font-size: 12px;
+}
+
+.end .p2 {
+    margin-top: 10px;
+    font-weight: lighter;
+    font-size: 10px;
+}
+
+.end img{
+    margin-top: 5px;
+    width: 10%;
+}
