--- a/responsive.css
+++ b/responsive.css
@@ -173,7 +173,8 @@
 @media screen and (max-width: 965px){
     .header{
         position: fixed;
-        background-color: rgba(22, 22, 23, .8);
+        /* background-color: rgba(22, 22, 23, .8); */
+        background-color: rgb(22, 22, 23);
         width: 100%;
         top: 0;
         left: 0;
