--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,14 @@ header{
     position: fixed;  
     width: 100%;
     justify-content: center;
+    justify-items: center;
     z-index: 1000;
     background-color: rgba(22, 22, 23, .8);
     transition: top 0.3s;
+}
+
+.header_fulldark{
+    background-color: rgb(22, 22, 23);
 }
 
 .nav{
@@ -102,6 +107,96 @@ nav ul li{
 .nav_toggle{
     color: white;
 }
+
+
+/* ====== Searchbar ====== */
+.nav_search ul li{
+    list-style-type: none; 
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.search_bar .ri-search-line{
+    font-size: 25px;
+    padding: 0 10px 0 10px;
+}
+
+.nav_search ul li a{
+    text-decoration: none;
+    color: white;
+    margin-left: 10px;
+    font-weight: lighter;
+    font-size: 12px;
+}
+
+.nav_search i{
+    color: white;
+}
+
+.nav_search .link p{
+    margin:10px 0 10px 0;
+    color: rgb(149, 149, 149);
+    font-weight: lighter;
+}
+
+.nav_search ul li i{
+    color: white;
+}
+
+/*  */
+                        /* ========== show search bar============ */
+.nav_search{
+    width: 100%;
+    height: 100vh;                          
+    backdrop-filter: blur(10px);
+    letter-spacing: 1px;
+    display: none;
+    transition: top .4s;
+}
+
+.show_search_bar{
+    display: block;
+}
+
+.nav_search_items{
+    max-width: 100%;
+    height: fit-content;
+    background-color: rgb(22, 22, 23);
+
+    padding-bottom: 5%;
+    padding-left: 15%;
+    padding-top: 15px;
+}
+
+/*  */
+.search_bar{
+    display: inline-block;
+    overflow: hidden;
+    width: 100%;
+    margin: 10px 0 10px 0;
+}
+
+.nav_search_items .input::placeholder {
+    color: rgb(149, 149, 149);
+    text-decoration: none;
+    border: none;
+    font-size: 25px;
+    width: 100%;
+}
+
+.nav_search_items .input{
+    background-color: rgb(22, 22, 23);
+    border: none; /* Xoá border */
+    outline: none; /* Xoá outline */
+    width: fit-content;
+    width: 300px;
+    height: 100px;
+    margin: 0;
+    padding: 0;
+}
+
+
 
 /* =======================main======================= */
 /*Section Content */
